--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Heebo&display=swap" rel="stylesheet">
     <!-- Awsome faticon -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+    <script src="https://kit.fontawesome.com/f1145ad436.js" crossorigin="anonymous"></script>
     <!-- bootstrap scripts -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -25,7 +26,7 @@
 
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
 
-      <a class="navbar-brand" href="#">VAPE-G</a>
+      <a class="navbar-brand" href="index.html">VAPE-G</a>
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -35,10 +36,10 @@
           <ul class="navbar-nav ml-auto">
             <li class="nav-item"><a class="nav-link" href="Formy.html">Formy</a></li>
             <li class="nav-item"><a class="nav-link" href="Jídelníček.html">Jídelníček</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Tréninky</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Ceny</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Registrace</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Login</a></li>
+            <li class="nav-item"><a class="nav-link" href="Tréninky.html">Tréninky</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">*Ceny*</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">*Registrace*</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">*Login*</a></li>
           </ul>
         </div>
     </nav>
@@ -70,18 +71,18 @@
 
       <div class="container-fluid">
         <div class="row">
-          <div class="col-sm">
-            <img style="" src="images/J_psi.png" class="little-images">
+          <div class="box col-sm">
+            <a href='jídelníček.html'><i class="icon fas fa-utensils fa-4x"></i></a>
             <h3>Jídelníček</h3>
             <p>Nabrat nebo schodit kila? Pro nás není problém ti vytvořit jídelníček na míru, který bude fungovat! Budeš muset jíst zdravě, to ale neznamená, že ti to nebude chutnat. </p>
           </div>
-          <div class="col-sm">
-            <img style="" src="images/T_tau.png" class="little-images">
+          <div class="box col-sm">
+            <a href='Tréninky.html'><i class="icon fas fa-clipboard fa-4x"></i></a>
             <h3>Trénink</h3>
             <p>Odvíjejí se od toho, co chceš dělat se svojí váhou a jak si představuješ svoji postavu v budoucnu.</p>
           </div>
-          <div class="col-sm">
-            <img style="" src="images/f_sigma.png" class="little-images">
+          <div class="box col-sm">
+            <a href='Formy.html'><i class="icon fas fa-child fa-4x"></i></a>
             <h3>Forma</h3>
             <p>Pokroky na své postavě občas přehlížíme. Váha může být stejná, ale jde o to, jak vypadáme! Kontrola formy je proto nejlepší způsob jak mít důkaz, že to funguje.</p>
           </div>
