--- a/Login.html
+++ b/Login.html
@@ -7,8 +7,14 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css"/>
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Bevan&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Heebo&display=swap" rel="stylesheet">
+    <!-- Awsome faticon -->
+    <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+    <script src="https://kit.fontawesome.com/f1145ad436.js" crossorigin="anonymous"></script>
+    <!-- bootstrap scripts -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
@@ -18,9 +24,9 @@
 
   <section id="title">
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
 
-      <a class="navbar-brand" href="#">VAPE-G</a>
+      <a class="navbar-brand" href="index.html">VAPE-G</a>
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -28,8 +34,8 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item"><a class="nav-link" href="#">Formy</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Jídelníček</a></li>
+            <li class="nav-item"><a class="nav-link" href="Formy.html">Formy</a></li>
+            <li class="nav-item"><a class="nav-link" href="Jídelníček.html">Jídelníček</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Tréninky</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Ceny</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Registrace</a></li>
@@ -40,15 +46,49 @@
 
     <div class="container-fluid">
       <div class="row">
-        <div class="col-lg-12">
-          <h1>Chceš udělat progress? Trénuj s námi!</h1>
+        <div class="col-lg-6">
+          <h1>Chceš udělat progres? Trénuj s námi!</h1>
+          <button type="button" class="btn btn-dark btn-lg download-button"><i class="fas fa-heartbeat"></i>Chci trenéra!</button>
+          <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-instagram"></i>Instagram</button>
         </div>
-        <div class="col-lg-12">
-          <img src="pv_1.png" alt="" width="500px" height="300px" class="img_pv">
+        <div class="col-lg-6  col-md-6 col-sm-12">
+          <img style="object-fit: contai" src="images/pv_1.png" alt="" width="375" height="225px" class="img_pv title-img2">
         </div>
+        <div class="col-lg-6 col-md-6 col-sm-12">
+          <img style="object-fit: contai" src="images/p_1.png" alt="" width="375" height="225px" class="img_pv title-img">
+        </div>
+        <div class="col-lg-6">
+          <h1>Jídelníček a tréninky přesně pro tebe!</h1>
+        </div>
+
       </div>
     </div>
-  </section>
+
+
+    </section>
+
+    <section id="middle-title">
+
+      <div class="container-fluid">
+        <div class="row">
+          <div class="box col-sm">
+            <a href='jídelníček.html'><i class="icon fas fa-utensils fa-4x"></i></a>
+            <h3>Jídelníček</h3>
+            <p>Nabrat nebo schodit kila? Pro nás není problém ti vytvořit jídelníček na míru, který bude fungovat! Budeš muset jíst zdravě, to ale neznamená, že ti to nebude chutnat. </p>
+          </div>
+          <div class="box col-sm">
+            <a href='Tréninky.html'><i class="icon fas fa-clipboard fa-4x"></i></a>
+            <h3>Trénink</h3>
+            <p>Odvíjejí se od toho, co chceš dělat se svojí váhou a jak si představuješ svoji postavu v budoucnu.</p>
+          </div>
+          <div class="box col-sm">
+            <a href='Formy.html'><i class="icon fas fa-child fa-4x"></i></a>
+            <h3>Forma</h3>
+            <p>Pokroky na své postavě občas přehlížíme. Váha může být stejná, ale jde o to, jak vypadáme! Kontrola formy je proto nejlepší způsob jak mít důkaz, že to funguje.</p>
+          </div>
+        </div>
+      </div>
+    </section>
 
   </body>
 </html>
