--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="box col-sm">
-            <a href='jídelníček.html'><i class="icon fas fa-utensils fa-4x"></i></a>
+            <a href='Jídelníček.html'><i class="icon fas fa-utensils fa-4x"></i></a>
             <h3>Jídelníček</h3>
             <p>Nabrat nebo schodit kila? Pro nás není problém ti vytvořit jídelníček na míru, který bude fungovat! Budeš muset jíst zdravě, to ale neznamená, že ti to nebude chutnat. </p>
           </div>
