--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>VAPE-G</title>
+    <title>VAPEHO</title>
     <link rel="icon" type="image/png" href="images/Favicon.png"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css"/>
@@ -26,7 +26,7 @@
 
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
 
-      <a class="navbar-brand" href="index.html">VAPE-G</a>
+      <a class="navbar-brand" href="index.html">VAPEHO</a>
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -52,10 +52,10 @@
           <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-instagram"></i>Instagram</button>
         </div>
         <div class="col-lg-6  col-md-6 col-sm-12">
-          <img style="object-fit: contai" src="images/pv_1.png" alt="" width="375" height="225px" class="img_pv title-img2">
+          <img style="object-fit: contai" src="images/pv_1.png" alt="" width="375" height="225px" class="img_pv title-img2 img_title">
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12">
-          <img style="object-fit: contai" src="images/p_1.png" alt="" width="375" height="225px" class="img_pv title-img">
+          <img style="object-fit: contai" src="images/p_1.png" alt="" width="375" height="225px" class="img_pv title-img img_title">
         </div>
         <div class="col-lg-6">
           <h1>Jídelníček a tréninky přesně pro tebe!</h1>
@@ -74,21 +74,101 @@
           <div class="box col-sm">
             <a href='Jídelníček.html'><i class="icon fas fa-utensils fa-4x"></i></a>
             <h3>Jídelníček</h3>
-            <p>Nabrat nebo schodit kila? Pro nás není problém ti vytvořit jídelníček na míru, který bude fungovat! Budeš muset jíst zdravě, to ale neznamená, že ti to nebude chutnat. </p>
+            <p class="midlle-p">Nabrat nebo schodit kila? Pro nás není problém ti vytvořit jídelníček na míru, který bude fungovat! Budeš muset jíst zdravě, to ale neznamená, že ti to nebude chutnat. </p>
           </div>
           <div class="box col-sm">
             <a href='Tréninky.html'><i class="icon fas fa-clipboard fa-4x"></i></a>
             <h3>Trénink</h3>
-            <p>Odvíjejí se od toho, co chceš dělat se svojí váhou a jak si představuješ svoji postavu v budoucnu.</p>
+            <p class="midlle-p">Odvíjejí se od toho, co chceš dělat se svojí váhou a jak si představuješ svoji postavu v budoucnu.</p>
           </div>
           <div class="box col-sm">
             <a href='Formy.html'><i class="icon fas fa-child fa-4x"></i></a>
             <h3>Forma</h3>
-            <p>Pokroky na své postavě občas přehlížíme. Váha může být stejná, ale jde o to, jak vypadáme! Kontrola formy je proto nejlepší způsob jak mít důkaz, že to funguje.</p>
+            <p class="midlle-p">Pokroky na své postavě občas přehlížíme. Váha může být stejná, ale jde o to, jak vypadáme! Kontrola formy je proto nejlepší způsob jak mít důkaz, že to funguje.</p>
           </div>
         </div>
       </div>
     </section>
+
+
+
+    <section id="switch-title">
+
+      <h3 class="switch-h3">Trenéři</h3>
+
+      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="10000">
+        <div class="carousel-inner">
+          <div class="carousel-item active" style="background-color: #424642;">
+
+            <div class="container-fluid">
+              <div class="row">
+                <div class="box col-sm">
+                  <img src="images/Petr_Herian_foto.jpg" alt="petis_profil" class="profil-photo">
+                </div>
+                <div class="box col-sm">
+                  <h3 class="profil_h3">Petis ( 21 let )</h3>
+                  <p class="switch-p">Od svých 5 let až do 18 jsem hrál fotbal, takže mám zažité kondiční tréninky. Fitnes se věnuji od svých 17 let a v 19 letech jsem úspěšně složil
+                    trenérské zkoušky. Právě jsem v přípravě na Mistrovství České republiky v kulturistice, která se koná 6. a 12. června. <br> <u style="color: #eeb76b;">Certifikáty</u> <br>
+                    - Instruktor Fitness<br>- Trenér Kulturistiky</p>
+
+                </div>
+              </div>
+            </div>
+
+          </div>
+          <div class="carousel-item" style="background-color: #424642;">
+
+            <div class="container-fluid">
+              <div class="row">
+                <div class="box col-sm">
+                  <img src="images/vasek.jpg" alt="petis_profil" class="profil-photo">
+                </div>
+                <div class="box col-sm">
+                  <h3 class="profil_h3">Vašek ( 21 let )</h3>
+                  <p class="switch-p">Od svých 5 let až do 15 jsem hrál fotbal, potom jsem začal běhat jako hubený hovno (atlet). No a v 19 mi došlo, že mám vobří nohy,
+                    tak se vydám Fitnes cestou. Právě jsem v přípravě na Mistrovství České republiky v kulturistice, která se koná 6. a 12. června. <br> <u style="color: #eeb76b;">Certifikáty</u> <br>
+                    - Instruktor Fitness<br>- Trenér Kulturistiky</p>
+
+                </div>
+              </div>
+            </div>
+
+          </div>
+          <div class="carousel-item" style="background-color: #424642;">
+
+            <div class="container-fluid">
+              <div class="row">
+                <div class="box col-sm">
+                  <img src="images/jan.jpg" alt="petis_profil" class="profil-photo">
+                </div>
+                <div class="box col-sm">
+                  <h3 class="profil_h3">Honza ( 21 let )</h3>
+                  <p class="switch-p">Od svých 5 let až do 13 jsem hrál fotbal, potom jsem zjistil, že hraju jak kus hovna tak jsem si šel plácat s jounasem pinkpong. Z odpalů
+                    míčků mi narostly vobrovský latisimusi, tak jsem začal cvičit a vybudoval jsem si na zádech letiště. Právě jsem v přípravě na Mistrovství České republiky v kulturistice, která se koná 6. a 12. června. <br> <u style="color: #eeb76b;">Certifikáty</u> <br>
+                    - Instruktor Fitness<br>- Trenér Kulturistiky</p>
+
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+  </section>
+  <section id="press">
+    <img src="images/HERIGYM.png" alt="" class="reklama-photo">
+    <img src="images/Helulife.png" alt="" class="reklama-photo">
+  </section>
+
 
   </body>
 </html>
