--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <li class="nav-item"><a class="nav-link" href="Jídelníček.html">Jídelníček</a></li>
             <li class="nav-item"><a class="nav-link" href="Tréninky.html">Tréninky</a></li>
             <li class="nav-item"><a class="nav-link" href="#">*Ceny*</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">*Registrace*</a></li>
+            <li class="nav-item"><a class="nav-link" href="Registrace.html">*Registrace*</a></li>
             <li class="nav-item"><a class="nav-link" href="#">*Login*</a></li>
           </ul>
         </div>
@@ -48,8 +48,8 @@
       <div class="row">
         <div class="col-lg-6">
           <h1>Chceš udělat progres? Trénuj s námi!</h1>
-          <button type="button" class="btn btn-dark btn-lg download-button"><i class="fas fa-heartbeat"></i>Chci trenéra!</button>
-          <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-instagram"></i>Instagram</button>
+          <button type="submit" onClick="location.href='Formy.html'" class="btn btn-dark btn-lg download-button"><i class="fas fa-heartbeat"></i>Chci trenéra!</button>
+          <button type="button" onclick="window.open('https://www.instagram.com/peta.herian/')" class="btn btn-outline-primary btn-lg download-button"><i class="fab fa-instagram"></i>Instagram</button>
         </div>
         <div class="col-lg-6  col-md-6 col-sm-12">
           <img style="object-fit: contai" src="images/pv_1.png" alt="" width="375" height="225px" class="img_pv title-img2 img_title">
@@ -98,17 +98,17 @@
 
       <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="10000">
         <div class="carousel-inner">
-          <div class="carousel-item active" style="background-color: #424642;">
+          <div class="carousel-item active" style="background-color: #a2b29f;"> <!-- BARVA -->
 
             <div class="container-fluid">
               <div class="row">
                 <div class="box col-sm">
-                  <img src="images/Petr_Herian_foto.jpg" alt="petis_profil" class="profil-photo">
+                  <img src="images/lepsi_petr.jpg" alt="petis_profil" class="profil-photo">
                 </div>
                 <div class="box col-sm">
                   <h3 class="profil_h3">Petis ( 21 let )</h3>
-                  <p class="switch-p">Od svých 5 let až do 18 jsem hrál fotbal, takže mám zažité kondiční tréninky. Fitnes se věnuji od svých 17 let a v 19 letech jsem úspěšně složil
-                    trenérské zkoušky. Právě jsem v přípravě na Mistrovství České republiky v kulturistice, která se koná 6. a 12. června. <br> <u style="color: #eeb76b;">Certifikáty</u> <br>
+                  <p class="switch-p">Od svých 5 let až do 18 jsem hrál fotbal, takže mám zažité kondiční tréninky. Fitnes se věnuji od svých 17 let.
+                     Právě jsem v přípravě na Mistrovství České republiky v kulturistice, která se koná 6. a 12. června. <br> <u style="color: #eeb76b;">Certifikáty</u> <br>
                     - Instruktor Fitness<br>- Trenér Kulturistiky</p>
 
                 </div>
@@ -121,12 +121,12 @@
             <div class="container-fluid">
               <div class="row">
                 <div class="box col-sm">
-                  <img src="images/vasek.jpg" alt="petis_profil" class="profil-photo">
+                  <img src="images/22_vasek.png" alt="petis_profil" class="profil-photo">
                 </div>
                 <div class="box col-sm">
                   <h3 class="profil_h3">Vašek ( 21 let )</h3>
                   <p class="switch-p">Od svých 5 let až do 15 jsem hrál fotbal, potom jsem začal běhat jako hubený hovno (atlet). No a v 19 mi došlo, že mám vobří nohy,
-                    tak se vydám Fitnes cestou. Právě jsem v přípravě na Mistrovství České republiky v kulturistice, která se koná 6. a 12. června. <br> <u style="color: #eeb76b;">Certifikáty</u> <br>
+                    tak se vydám Fitnes cestou. <br> <u style="color: #eeb76b;">Certifikáty</u> <br>
                     - Instruktor Fitness<br>- Trenér Kulturistiky</p>
 
                 </div>
@@ -143,8 +143,8 @@
                 </div>
                 <div class="box col-sm">
                   <h3 class="profil_h3">Honza ( 21 let )</h3>
-                  <p class="switch-p">Od svých 5 let až do 13 jsem hrál fotbal, potom jsem zjistil, že hraju jak kus hovna tak jsem si šel plácat s jounasem pinkpong. Z odpalů
-                    míčků mi narostly vobrovský latisimusi, tak jsem začal cvičit a vybudoval jsem si na zádech letiště. Právě jsem v přípravě na Mistrovství České republiky v kulturistice, která se koná 6. a 12. června. <br> <u style="color: #eeb76b;">Certifikáty</u> <br>
+                  <p class="switch-p">Od svých 5 let až do 13 jsem hrál fotbal, potom jsem šel plácat s jounasem pinkpong. Z odpalů
+                    míčků mi narostly vobrovský latisimusi, tak jsem začal cvičit a vybudoval jsem si na zádech letiště.<br> <u style="color: #eeb76b;">Certifikáty</u> <br>
                     - Instruktor Fitness<br>- Trenér Kulturistiky</p>
 
                 </div>
@@ -169,6 +169,81 @@
     <img src="images/Helulife.png" alt="" class="reklama-photo">
   </section>
 
+  <section id="pricing">
+
+    <div class="card-deck mb-3 text-center">
+        <div class="col-lg-6 col-md-12">
+          <div class="card mb-4 box-shadow">
+            <div class="card-header">
+              <h4 class="my-0 font-weight-normal">Vyzkoušení zdarma</h4>
+            </div>
+            <div class="card-body">
+              <h1 class="card-title pricing-card-title">0 Kč <small class="text-muted">/ mo</small></h1>
+              <ul class="list-unstyled mt-3 mb-4">
+                <li>- Jídelníček na míru</li>
+                <li>- Sestavení Tréninku</li>
+                <li>- E-mail podpora</li>
+                <li style="color:red;">x</li>
+              </ul>
+              <button type="button" class="btn btn-lg btn-block btn-outline-primary">Vyzkoušet!</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-12">
+          <div class="card mb-4 box-shadow">
+            <div class="card-header">
+              <h4 class="my-0 font-weight-normal">Pro</h4>
+            </div>
+            <div class="card-body">
+              <h1 class="card-title pricing-card-title">1499 Kč <small class="text-muted">/ mo</small></h1>
+              <ul class="list-unstyled mt-3 mb-4">
+                <li>- Jídelníček na míru a úpravy dle výsledků</li>
+                <li>- Sestavení Tréninkového plánu a úpravy dle potřeby</li>
+                <li>- Nepřetržitá e-mail podpora</li>
+                <li>- Kontrola formy každý týden</li>
+              </ul>
+              <button type="button" class="btn btn-lg btn-block btn-primary">KOUPIT!</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+    <!-- <div class="row">
+
+      <div class="col-lg-6 col-md-12">
+
+        <div class="card card1">
+          <div class="card-header">
+            <h3>Online zkušební verze</h3>
+          </div>
+          <div class="card-body">
+            <h2>Zdarma na jeden měsíc!</h2>
+            <button type="button" onClick="location.href='Registrace.html'" class="btn btn-outline-light btn-lg btn-block">Click!</button>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="col-lg-6 col-md-12">
+
+        <div class="card card1">
+          <div class="card-header">
+            <h3>Online Trenér</h3>
+          </div>
+          <div class="card-body">
+            <h2>1499kč / měsíc</h2>
+            <button type="button" onClick="location.href='Registrace.html'" class="btn btn-outline-light btn-lg btn-block">Click!</button>
+          </div>
+        </div>
+
+      </div>
+
+      </div>
+    </div>
+    </div> -->
+  </section>
 
   </body>
 </html>
